@@ -365,7 +365,6 @@ int WF3cte (char *input, char *output, CCD_Switch *cte_sw,
                 return (status);
 
             start = sci_corner[0] - ref_corner[0];
-            finish = start + subab.sci.data.nx + 2103;
             finish = start + subab.sci.data.nx;
             if ( start >= 25 &&  finish + 60 <= (RAZ_COLS/2) - 25){
                 sprintf(MsgText,"Subarray not taken with physical overscan (%i %i)\nCan't perform CTE correction\n",start,finish);
